+implemented recordviewer as panel +introduced panel definition structure -changed autosave hint to an icon -allowed nav menu to expand width -removed scaling from panel buttons to ensure aligned blocks +fixed internal users page color

--- a/styling/styles-pages.css
+++ b/styling/styles-pages.css
@@ -168,7 +168,7 @@
 	gap: 0.25rem;
 }
 
-.page-panel .page-panel-tiles > .page-panel
+.page-panel .page-panel-tiles>.page-panel
 {
 	flex-grow: 1.0;
 	flex-shrink: 1.0;
@@ -179,12 +179,10 @@
 .page-panel.panel-button
 {
 	cursor: pointer;
-	scale: 95%;
 }
 
 .page-panel.panel-button:hover
 {
-	scale: 100%;
 	background-color: hsl(from var(--theme-color) h s 16%);
 }
 
@@ -239,6 +237,7 @@
 	overflow: hidden;
 	border-radius: 0.5rem;
 }
+
 .inset-box:not(.scroll-y)::before
 {
 	content: '';
@@ -286,14 +285,14 @@
 	background-color: #f805;
 }
 
-.page-move-button > i
+.page-move-button>i
 {
 	color: white;
 	pointer-events: none;
 	opacity: 15%;
 }
 
-.page-move-button:hover > i
+.page-move-button:hover>i
 {
 	opacity: 65%;
 }
@@ -332,13 +331,13 @@
 	scale: 95%;
 }
 
-.page-close-button > i
+.page-close-button>i
 {
 	pointer-events: none;
 	opacity: 15%;
 }
 
-.page-close-button:hover > i
+.page-close-button:hover>i
 {
 	color: red;
 	opacity: 80%;
@@ -392,7 +391,7 @@
 
 
 
-.page-root:hover > .page-title-bar
+.page-root:hover>.page-title-bar
 {
 	color: hsl(from var(--theme-color) h s 70%);
 }
@@ -414,7 +413,7 @@
 	background: #0002;
 }
 
-.page-title-bar > i
+.page-title-bar>i
 {
 	display: inline;
 	position: static;
@@ -565,7 +564,7 @@
 
 
 
-.setting-root > i
+.setting-root>i
 {
 	pointer-events: none;
 	position: absolute;
@@ -579,7 +578,7 @@
 	text-shadow: none;
 }
 
-.setting-root > span
+.setting-root>span
 {
 	pointer-events: none;
 
@@ -602,7 +601,7 @@
 	transition-timing-function: ease-in-out;
 }
 
-.setting-root:hover > span
+.setting-root:hover>span
 {
 	color: hsl(from var(--theme-color) h s 75%);
 
@@ -629,18 +628,18 @@
 	background-color: hsl(from var(--theme-color) h s 15%);
 }
 
-.setting-root-on > span
+.setting-root-on>span
 {
 	color: hsl(from var(--theme-color) h s 85%);
 }
 
-.setting-root-on > i
+.setting-root-on>i
 {
 	color: hsl(from var(--theme-color) h s 95%);
 	text-shadow: 0px 0px 6px var(--theme-color);
 }
 
-.setting-root-on:hover > span
+.setting-root-on:hover>span
 {
 	color: hsl(from var(--theme-color) h s 95%);
 }
@@ -704,14 +703,14 @@
 	outline: solid 2px var(--theme-color);
 }
 
-.setting-root-slider:hover > .setting-slider-fill
+.setting-root-slider:hover>.setting-slider-fill
 {
 	background-color: hsl(from var(--theme-color) h s 30%);
 }
 
 
 
-.setting-root:hover > .setting-root-toggle
+.setting-root:hover>.setting-root-toggle
 {
 	opacity: 100%;
 	text-shadow: 0px 0px 6px rgba(from var(--shadow-color) r g b / 0.25);
@@ -719,7 +718,7 @@
 	background-color: rgba(from var(--theme-color) r g b / 0.2);
 }
 
-.setting-root:active > .setting-root-toggle
+.setting-root:active>.setting-root-toggle
 {
 	box-shadow: 0px 0px 2px rgba(from var(--shadow-color) r g b / 0.25);
 }
